課題15を再アップロード

--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -6,7 +6,7 @@ body{
 
 h1 {
      font-family: "Josefin Sans", sans-serif;
-     font-size: 2em;
+     font-size: 2rem;
      font-optical-sizing: auto;
      font-weight: weight;
      font-style: normal;
@@ -20,7 +20,7 @@ h1 {
 }
 
 .color1{
-         color: pink;
+         color: rgb(255, 192, 203);
 }
 
 .color2{
